@@ -1,12 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-mysql
-version:      2.9005_1
+version:      2.9005_3
 version_from: lib/DBD/mysql.pm
 installdirs:  site
 requires:
     Data::Dumper:                  0
-    DBI:                           1.08
+    DBI:                           1.43
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.21
